Now using IvoPetkov\HTML5DOMDocument for better parsing of HTML5. `hyphenateHtmlDom` is made public in case someone needs to hyphenate a DOMNode directly

--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,8 @@
     "php": ">=5.6",
     "ext-json": "*",
     "ext-mbstring": "*",
-    "ext-dom": "*"
+    "ext-dom": "*",
+    "ivopetkov/html5-dom-document-php": "^2.3"
   },
   "require-dev": {
     "codacy/coverage": "1.*",
